Fix notifications dropdown appearance on mobile

--- a/less/forum/NotificationsDropdown.less
+++ b/less/forum/NotificationsDropdown.less
@@ -10,7 +10,7 @@
     }
   }
   & .Dropdown-toggle .Button-label {
-    margin-left: 10px;
+    margin-left: 7px;
   }
 }
 @media @tablet-up {
@@ -30,7 +30,7 @@
 .NotificationsDropdown-unread {
   position: absolute;
   top: 1px;
-  right: 1px;
+  left: 17px;
   background: @header-color;
   color: @header-bg;
   font-size: 11px;
